_finalize function should not be declared noexcept on create sharded collection path

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v5.0
    • Hide

      1. Apply the attached patch
      2. Run the attached test

      Show
      1. Apply the attached patch 2. Run the attached test
    • Sharding EMEA 2021-05-31
    • 151
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The _finalize function is declared as noexcept, however it might throw when trying to get a shard from the shard registry, this might cause the server to crash.

        1. bf_repro.js
          0.9 kB
          Marcos José Grillo Ramirez
        2. diff.patch
          0.9 kB
          Marcos José Grillo Ramirez

            Assignee:
            Marcos José Grillo Ramirez
            Reporter:
            Marcos José Grillo Ramirez
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: