SERVER-57185 Remove noexcept to _finalize function on create sharded collection path